test/error/test-08.ifj21
-- 6 (incompatible types in expression)
require "ifj21"

function main()
    local a : integer = 11
    local b : string = "foo"

    b = a .. b
end
